# pwrs

./: Cargo.toml  appveyor.yml  readme.md  readme.org
src/: authenticator.rs  credentials.rs  crypto.rs  entry.rs  error.rs  lib.rs  main.rs  prompt.rs  protector.rs  utils.rs  vault.rs
src/win32/: bcrypt.rs  credui.rs  error.rs  ffi.rs  handle.rs  lpcwstr.rs  mod.rs  ncrypt.rs
src/win32/ncrypt/: ffi.rs  mod.rs
