[package]
name = "pwrs"
version = "0.1.1"
authors = ["John Wood <j@jdtw.us>"]
license = "MIT"
repository = "https://github.com/jdtw/pwrs"
description = """
A Win32 command-line password manager.
"""

[dependencies]
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
winapi = { version = "0.3", features = ["bcrypt", "wincred", "combaseapi", "errhandlingapi", "winerror"] } 
failure = "0.1"
clap = "2.31"
clipboard-win = "2.1"
seckey = "0.9"
memsec = "0.5"