[package]
name = "pwv"
version = "0.2.1"
authors = ["John Wood <j@jdtw.us>"]
license = "MIT"
repository = "https://github.com/jdtw/pwrs"
description = """
A Win32 command-line password manager.
"""

[dependencies]
clap = "2.31"
clipboard-win = "2.1"
failure = "0.1"
hex = "0.3"
memsec = "0.5"
seckey = "0.9"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
winapi = { version = "0.3", features = ["bcrypt", "wincred", "combaseapi", "errhandlingapi", "winerror"] } 